--- a/src/SON/CatalogoBundle/Resources/views/Default/index.html.twig
+++ b/src/SON/CatalogoBundle/Resources/views/Default/index.html.twig
@@ -7,9 +7,11 @@
     Posso utilizar dessa forma extender um bundle
     Passando o mesmo e a view de um bubdle que desejar extender
 #}
+
 {% extends '::base.html.twig' %}
 {% block body %}
 
+{% block title 'Ola Pessoal' %}
 
 {# Aula 6 - Tag de comentário #}
 {# Abaixo segue abaixo o recurso de printar a variavel com o twig #}
