--- a/src/SON/CategoriaBundle/Resources/views/Default/index.html.twig
+++ b/src/SON/CategoriaBundle/Resources/views/Default/index.html.twig
@@ -1,11 +1,12 @@
 {# Exercicio módulo 1 – Criando um bundle e uma rota #}
 
 {% extends '::base.html.twig' %}
+
+{% block title 'Exercicio 1' %}
+
 {% block body %}
 
-    {%for i in 1..categorias%}
-        {{ i }} <br/>
-    {%endfor %}
+    teste
 
 
 {% endblock %}
