--- a/src/SON/CatalogoBundle/Resources/views/Default/index.html.twig
+++ b/src/SON/CatalogoBundle/Resources/views/Default/index.html.twig
@@ -18,6 +18,10 @@
 Hello {{ name }} {{ quantidade}}!
 <br/><br/>
 
+{{catalogo.name}} <br/>
+{{catalogo.descricao}}
+<br/><br/>
+
 {#
     Aula 6 - Tag de Ação
     Nesse caso executando um for podendo usar if entre outros operadores
