--- a/src/SON/CatalogoBundle/Resources/views/layout.html.twig
+++ b/src/SON/CatalogoBundle/Resources/views/layout.html.twig
@@ -1,2 +1,14 @@
 {% extends '::base.html.twig' %}
 {% block title 'Catálogo' %}
+
+
+{% block stylesheets %}
+{%
+    stylesheets filter='cssrewrite'
+    'bundles/catalogo/css/*'
+%}
+    <link rel="stylesheet" href="{{asset_url}}" />
+
+{% endstylesheets %}
+
+{% endblock %}
