Fase 3 do Projeto – Exercicio 1

--- a/src/SON/CategoriaBundle/Resources/views/Categoria/index.html.twig
+++ b/src/SON/CategoriaBundle/Resources/views/Categoria/index.html.twig
@@ -1,4 +1,8 @@
-<h1>Categoria list</h1>
+{% extends 'CategoriaBundle::layout.html.twig' %}
+
+{% block body %}
+
+    <h1>Categoria list</h1>
 
 <table class="records_list">
     <thead>
@@ -35,3 +39,5 @@
         </a>
     </li>
 </ul>
+
+{% endblock %}
