--- a/src/SON/CategoriaBundle/Resources/views/Categoria/show.html.twig
+++ b/src/SON/CategoriaBundle/Resources/views/Categoria/show.html.twig
@@ -1,3 +1,5 @@
+{% extends 'CategoriaBundle::layout.html.twig' %}
+{% block body %}
 <h1>Categoria</h1>
 
 <table class="record_properties">
@@ -31,3 +33,4 @@
         </form>
     </li>
 </ul>
+{% endblock %}
