--- a/src/SON/CategoriaBundle/Resources/views/Produto/edit.html.twig
+++ b/src/SON/CategoriaBundle/Resources/views/Produto/edit.html.twig
@@ -1,3 +1,5 @@
+{% extends 'CategoriaBundle::layout_produto.html.twig' %}
+{% block body %}
 <h1>Produto edit</h1>
 
 <form action="{{ path('produto_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
@@ -20,3 +22,4 @@
         </form>
     </li>
 </ul>
+{% endblock %}
