--- a/src/SON/CategoriaBundle/Resources/views/Produto/index.html.twig
+++ b/src/SON/CategoriaBundle/Resources/views/Produto/index.html.twig
@@ -1,3 +1,5 @@
+{% extends 'CategoriaBundle::layout_produto.html.twig' %}
+{% block body %}
 <h1>Produto list</h1>
 
 <table class="records_list">
@@ -37,3 +39,4 @@
         </a>
     </li>
 </ul>
+{% endblock %}
