--- a/src/SON/CategoriaBundle/Resources/views/Produto/new.html.twig
+++ b/src/SON/CategoriaBundle/Resources/views/Produto/new.html.twig
@@ -1,3 +1,5 @@
+{% extends 'CategoriaBundle::layout_produto.html.twig' %}
+{% block body %}
 <h1>Produto creation</h1>
 
 <form action="{{ path('produto_create') }}" method="post" {{ form_enctype(form) }}>
@@ -14,3 +16,4 @@
         </a>
     </li>
 </ul>
+{% endblock %}
