--- a/src/SON/CategoriaBundle/Resources/views/Produto/show.html.twig
+++ b/src/SON/CategoriaBundle/Resources/views/Produto/show.html.twig
@@ -1,3 +1,6 @@
+{% extends 'CategoriaBundle::layout_produto.html.twig' %}
+{% block body %}
+
 <h1>Produto</h1>
 
 <table class="record_properties">
@@ -35,3 +38,4 @@
         </form>
     </li>
 </ul>
+{% endblock %}
