--- a/src/SON/UserBundle/Resources/views/Login/login.html.twig
+++ b/src/SON/UserBundle/Resources/views/Login/login.html.twig
@@ -1,4 +1,5 @@
-{% extends '::base.html.twig' %}
+{% extends 'UserBundle::layout.html.twig' %}
+{% block title 'Login' %}
 
 {% block body %}
     {% if error %}
