--- a/src/SON/UserBundle/Resources/views/User/index.html.twig
+++ b/src/SON/UserBundle/Resources/views/User/index.html.twig
@@ -1,3 +1,6 @@
+{% extends 'UserBundle::layout.html.twig' %}
+{% block body %}
+
 <h1>User list</h1>
 
 <table class="records_list">
@@ -6,8 +9,7 @@
             <th>Id</th>
             <th>Username</th>
             <th>Password</th>
-            <th>Salt</th>
-            <th>Roles</th>
+            <!--<th>Roles</th>-->
             <th>Isactive</th>
             <th>Email</th>
             <th>Actions</th>
@@ -19,9 +21,7 @@
             <td><a href="{{ path('user_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
             <td>{{ entity.username }}</td>
             <td>{{ entity.password }}</td>
-            <td>{{ entity.salt }}</td>
             <!--<td>entity.roles</td>-->
-            <td></td>
             <td>{{ entity.isActive }}</td>
             <td>{{ entity.email }}</td>
             <td>
@@ -46,3 +46,4 @@
         </a>
     </li>
 </ul>
+{% endblock %}
