--- a/src/SON/CategoriaBundle/Resources/views/Produto/show.html.twig
+++ b/src/SON/CategoriaBundle/Resources/views/Produto/show.html.twig
@@ -17,6 +17,10 @@
             <th>Unidade</th>
             <td>{{ entity.unidade }}</td>
         </tr>
+        <tr>
+            <th>Categoria</th>
+            <td>{{ entity.categoria.nome }}</td>
+        </tr>
     </tbody>
 </table>
 
