--- a/src/SON/UserBundle/Resources/views/Register/register.html.twig
+++ b/src/SON/UserBundle/Resources/views/Register/register.html.twig
@@ -1,11 +1,21 @@
-{% extends 'UserBundle::layout.html.twig' %}
-{% block title 'Teste' %}
+{% extends '::base.html.twig' %}
 
 {% block body %}
+    <h1>Registro de Usuário</h1>
+    <form action="{{ path('user_register') }}" method="POST">
+        {{ form_errors(form) }}
 
+        {{ form_row(form.username) }}
+        {{ form_row(form.email) }}
+        {{ form_row(form.password.first, {
+            'label':'Password'
+        }) }}
+        {{ form_row(form.password.second, {
+            'label': 'Repeat password'
+        }) }}
 
-    <form action="{{ path('user_register') }}" method="post">
-        {{  form_widget(form) }}
-        <button type="submit">Enviar</button>
+        {{ form_rest(form) }}
+
+        <input type="submit" value="Enviar"/>
     </form>
 {% endblock %}
