Módulo 7 | Aulas 6 – Validacoes Client e Server Side

--- a/src/SON/UserBundle/Resources/views/Register/register.html.twig
+++ b/src/SON/UserBundle/Resources/views/Register/register.html.twig
@@ -16,6 +16,6 @@
 
         {{ form_rest(form) }}
 
-        <input type="submit" value="Enviar"/>
+        <input type="submit" value="Enviar" formnovalidate/>
     </form>
 {% endblock %}
